# snakeNladder

./: BoardDesign.pcm  CMakeLists.txt  DiceLib.cppm  DiceLib.pcm  MYSQLLib.pcm  README  a.out  aaa.cpp  diceRoll.cpp  gameSaveReload.pcm  gamemain.cpp  main  main.cpp  mainwindow.ui  mysql_test.cpp  notes.txt  performance  performance.cpp  save.cpp  save_reload_test.cpp  test  test.cpp
demo/mysql/: insert  insert.cpp  login  login.cpp  query  query.cpp  registration  registration.cpp
demo/save_reload/: delete  delete.cpp  load  load.cpp  save  save.cpp  show  show.cpp
gameHistory/: game1.txt  game2.txt  game3.txt
gameHistory/test/: t100000_p.txt  t100000_snl.txt  t10000_p.txt  t1000_p.txt  t100_snl.txt  t10_p.txt
header/: MYSQLLib.h  board.h  dice.h  save_reload.h
headers/: MYSQLLib.h  board.h  dice.h  diceRoll.h  dice_withcurses.h  gamemain.h  scene.h
lib/: BoardDesign.cppm  CMakeLists.txt  Dice.cppm  DiceLib.cppm  MYSQLLib.cppm  boardDesign.pcm  gameSaveReload.cppm
lib_test/: fig_plot.ipynb  mysql_test.cpp  performance.cpp
lib_test/test_savings/: t10000_snl.txt  t1000_snl.txt  t100_p.txt
modules/: BoardDesign.cppm  CMakeLists.txt  DiceLib.cppm  gameSaveReload.cppm
test/: board_test.cpp  data.xlsx  main_baorddesign.cpp  save_reload_test.cpp
test.dSYM/Contents/Resources/DWARF/: test
